--- a/BookPoolV2/Views/Checkout/Index.cshtml
+++ b/BookPoolV2/Views/Checkout/Index.cshtml
@@ -16,6 +16,12 @@
 
 
     List<BookPoolResult> booksInCart = ViewBag.BooksInCart as List<BookPoolResult>;
+
+    AspNetUser aspNetUser = new AspNetUser();
+    if(ViewBag.AspNetUser != null)
+    {
+        aspNetUser = ViewBag.AspNetUser as AspNetUser;
+    }
 }
 
 <div class="row container">
@@ -112,36 +118,36 @@
     @{
         foreach (var book in booksInCart)
         {
-        <div class="col s12 m12 l12" style="overflow-x:auto;overflow-y:hidden;">
-            @{
-                if (book.SellingStatus == Globals.BookSellingStatus_Available)
-                {
-                    <form action="#">
-                        <p>
-                            <label>
-                                <input class="addToCheckout" value="@book.ID" data-Price="@book.Price" type="checkbox">
-                                <span>Add to checkout</span>
-                            </label>
-                        </p>
-                    </form>
+            <div class="col s12 m12 l12" style="overflow-x:auto;overflow-y:hidden;">
+                @{
+                    if (book.SellingStatus == Globals.BookSellingStatus_Available)
+                    {
+                        <form action="#">
+                            <p>
+                                <label>
+                                    <input class="addToCheckout" value="@book.ID" data-Price="@book.Price" type="checkbox">
+                                    <span>Add to checkout</span>
+                                </label>
+                            </p>
+                        </form>
+                    }
                 }
-            }
-            <div class="row itemslist">
-                <div class="col s12 m6 l4" style="height:250px;overflow:hidden;margin-bottom:15px;">
-                    @Html.Partial("_CartBooks", book)
+                <div class="row itemslist">
+                    <div class="col s12 m6 l4" style="height:250px;overflow:hidden;margin-bottom:15px;">
+                        @Html.Partial("_CartBooks", book)
+                    </div>
                 </div>
             </div>
-        </div>
-                }
+        }
 
-                if(booksInCart.Count() == 0)
-                {
-                    <div class="col s12 m12 l12">
-                        <h4>
-                            Your cart is still empty.
-                        </h4>
-                    </div>
-                }
+        if (booksInCart.Count() == 0)
+        {
+            <div class="col s12 m12 l12">
+                <h4>
+                    Your cart is still empty.
+                </h4>
+            </div>
+        }
     }
 
 
@@ -210,6 +216,42 @@
                     <option value="newCard" data-icon="/img/payment/creditcardpayment.png" class="left">Add New Card</option>
                 </optgroup>*@
         </select>
+    </div>
+
+</div>
+
+<div class="row container">
+
+    <div class="row">
+        <div class="col s12 m12 l12">
+            <h5>
+                <i style="float: left;padding-right: 10px; line-height:0.8; color:var(--primaryRed);" class="material-icons">payment</i>
+                Contact Info
+            </h5>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col s12">
+            <div class="input-field col s6" style="padding-left:10px!important;">
+                <input id="firstName" type="text" class="validate" value="@aspNetUser.FirstName">
+                <label for="first_name">First Name</label>
+            </div>
+            <div class="input-field col s6" style="padding-left:10px!important;">
+                <input id="lastName" type="text" class="validate" value="@aspNetUser.LastName">
+                <label for="last_name">Last Name</label>
+            </div>
+        </div>
+        <div class="col s12">
+            <div class="input-field col s6" style="padding-left:10px!important;">
+                <input id="emailAddress" type="text" class="validate" value="@aspNetUser.Email">
+                <label for="emailAddress">Email Address</label>
+            </div>
+            <div class="input-field col s6" style="padding-left:10px!important;">
+                <input id="phoneNumber" type="text" class="validate" value="@aspNetUser.PhoneNumber">
+                <label for="phoneNumber">Phone Number</label>
+            </div>
+        </div>
     </div>
 
 </div>
@@ -334,7 +376,12 @@
             }
         });
 
-        var url = '@Url.Action("PlacedOrder","Checkout")?books=' + booksIDs.toString();
+        var firstName = $('#firstName').val();
+        var lastName = $('#lastName').val();
+        var emailAddress = $('#emailAddress').val();
+        var phoneNumber = $('#phoneNumber').val();
+
+        var url = '@Url.Action("PlacedOrder","Checkout")?books=' + booksIDs.toString() + '&FirstName=' + firstName + '&LastName=' + lastName + '&Email=' + emailAddress + '&PhoneNumber=' + phoneNumber;
         window.location = url;
     });
 
