--- a/BookPoolV2/Views/Shared/_AvailableBook.cshtml
+++ b/BookPoolV2/Views/Shared/_AvailableBook.cshtml
@@ -52,19 +52,19 @@
                             averageRating = "N/A";
                             backgroundColor = "grey";
                         }
-                        else if (Model.AverageRating < 2)
+                        else if (Model.AverageRating <= 2)
                         {
                             backgroundColor = "yellow";
                         }
-                        else if (Model.AverageRating < 3)
+                        else if (Model.AverageRating <= 3)
                         {
                             backgroundColor = "orange";
                         }
-                        else if (Model.AverageRating < 4)
+                        else if (Model.AverageRating <= 4)
                         {
                             backgroundColor = "green";
                         }
-                        else if (Model.AverageRating < 5)
+                        else if (Model.AverageRating <= 5)
                         {
                             backgroundColor = "forestgreen";
                         }
